# self-healing-rag

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
adaptation/: chunk_evolver.py  prompt_optimizer.py  quality_tracker.py  retrieval_tuner.py
api/: deps.py  main.py  schemas.py
api/routers/: __init__.py  heal.py  ingest.py  observability.py  query.py
configs/: config.yaml  prompts.yaml
core/: config.py  llm.client.py  logger.py  models.py
db/: __init__.py  models.py  session.py
evaluation/: __init__.py  verdict.py
evaluation/judges/: __init__.py  base.py  faithfulness.py  grounding.py  relevance.py
generation/: __init__.py  generator.py  prompt_templates.py
healing/: __init__.py  actions.py  dispatcher.py  feedback_logger.py
ingestion/: __init__.py  chunker.py  embedder.py  loader.py  metadata.py  vector_store.py
observability/: __init__.py  alerting.py  metrics.py  tracer.py
retrieval/: __init__.py  context_builder.py  query_processor.py  reranker.py  retriever.py
tests/: __init__.py  conftest.py
tests/integration/: test_healing_loop.py  test_pipeline_phase1.py
tests/unit/: test_healing.py  test_ingestion.py  test_observability.py  test_retrieval.py
