[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "self-healing-rag"
version = "0.1.0"
description = "Adaptive RAG system with autonomous quality control and self-healing loops"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core LLM / RAG
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "ollama>=0.2.0",

    # Vector Store
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # Document Loaders
    "pypdf>=4.2.0",
    "unstructured>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",

    # Retrieval
    "rank-bm25>=0.2.2",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Config
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",

    # Utils
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

phase2 = [
    "ragas>=0.1.9",
]

phase4 = [
    "optuna>=3.6.0",
    "dspy-ai>=2.4.0",
]

phase5 = [
    "prometheus-client>=0.20.0",
    "streamlit>=1.35.0",
]

[project.scripts]
shr = "api.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]